--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div class="container">
         <h1>Cậu có đồng ý làm người yêu tớ không?</h1>
         <div class="buttons">
-            <button id="yes">Có</button>
-            <button id="no">Kó</button>
+            <button id="yes">yes</button>
+            <button id="no">no</button>
         </div>
         <p id="response" class="hidden">Tuyệt vời! Tớ biết mà ❤️</p>
     </div>
